working pipeline with due modifications on DAG

--- a/notebooks/expl_2.ipynb
+++ b/notebooks/expl_2.ipynb
@@ -161,17 +161,31 @@
     "Using the script `merge_protein_fasta.py` with the snakemake rules `snakemake --cores 2 data/protein_fasta_merged/DDBJ.fasta` for each file, it will merge the files if necessary into data/protein_fasta_merged. \n",
     "\n",
     "Visualize with `snakemake --cores 4 --dag | dot -Tsvg > dag_all.svg`\n",
+    "\n",
+    "More complete command with cache and logging: `snakemake --cache --printshellcmds --reason --timestamp --cores 8 `\n",
+    "\n",
+    "## Activation du cache pour les règles lourdes\n",
+    "\n",
+    "Créer les répertoires nécessaires: \n",
+    "\n",
+    "```\n",
+    "sudo mkdir -p /mnt/snakemake-cache\n",
+    "sudo chown $(whoami) /mnt/snakemake-cache\n",
+    "\n",
+    "```\n",
+    "\n",
+    "`export SNAKEMAKE_OUTPUT_CACHE=/mnt/snakemake-cache/`\n",
+    "\n",
+    "Le caching est activé pour les règles de téléchargement. \n",
+    "\n",
+    "Afin d'exécuter les scripts dans le bon environnement, on export l'environement pixi avec `pixi workspace export conda-environment -e base envs/pixi_base_enf.yaml`\n",
+    "\n",
+    "On exécute snakemake depuis pixi (afin d'être sûr que ça soit le bon snakemake) et on donne les arguments conda nécessaires (exemple avec merge_annotated_proteins_metadata_tsvs): \n",
+    "\n",
+    "`pixi run snakemake all --cache --use-conda --conda-frontend mamba --printshellcmds --cores 2`\n",
+    "\n",
+    "Attention: certain crashes peuvent être dûs à une surcharge I/O en cas de multithreading trop important. \n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "773d6fdb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fasta_files"
    ]
   }
  ],
