simple workflow - phagescope - V1

--- a/notebooks/expl_2.ipynb
+++ b/notebooks/expl_2.ipynb
@@ -5,11 +5,13 @@
    "id": "450ff611",
    "metadata": {},
    "source": [
-    "# PhageScope data exploration\n",
+    "# PhageScope Pipeline\n",
     "\n",
     "Basic packages \n",
     "\n",
-    "The PhageScope data are downloaded via snakemake and reports generated on up to 50k randomly selected datapoint. \n"
+    "The PhageScope data are downloaded via snakemake and reports generated on up to 50k randomly selected datapoint. \n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -108,7 +110,7 @@
    "id": "1b2bd443",
    "metadata": {},
    "source": [
-    "## Protein Fasta\n",
+    "## Merging protein and phage Fasta\n",
     "\n",
     "Some sources have one fasta file per protein, other have one fasta file containing all proteins. \n",
     "\n",
@@ -150,7 +152,10 @@
     "\n",
     "```\n",
     "\n",
-    "### Merging Fasta files per source"
+    "### Merging Fasta files per source\n",
+    "\n",
+    "Using the script `merge_protein_fasta.py` with the snakemake rules `snakemake --cores 2 data/protein_fasta_merged/DDBJ.fasta` for each file, it will merge the files if necessary into data/protein_fasta_merged. \n",
+    "\n"
    ]
   },
   {
@@ -158,7 +163,7 @@
    "id": "9b0af2e6",
    "metadata": {},
    "source": [
-    "Using the script `merge_protein_fasta.py` with the snakemake rules `snakemake --cores 2 data/protein_fasta_merged/DDBJ.fasta` for each file, it will merge the files if necessary into data/protein_fasta_merged. \n",
+    "\n",
     "\n",
     "Visualize with `snakemake --cores 4 --dag | dot -Tsvg > dag_all.svg`\n",
     "\n",
@@ -186,6 +191,168 @@
     "\n",
     "Attention: certain crashes peuvent être dûs à une surcharge I/O en cas de multithreading trop important. \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cbb17a5",
+   "metadata": {},
+   "source": [
+    "# Phage Metadata Exploration\n",
+    "\n",
+    "Explore the data for further pip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "20c86da8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "data_dir = \"../data\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "78146fda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_24913/856263692.py:7: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  sampled_phages = phage_metadata.groupby('Phage_source').apply(lambda x: x.sample(n=10, random_state=42)).reset_index(drop=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Read data/merged/merged_phage_metadata.csv\n",
+    "phage_metadata = pd.read_csv(os.path.join(data_dir, \"merged/merged_phage_metadata.csv\"))\n",
+    "\n",
+    "\n",
+    "# For each Phage_source, get a sample of 10 phages in a new dataframe\n",
+    "\n",
+    "sampled_phages = phage_metadata.groupby('Phage_source').apply(lambda x: x.sample(n=10, random_state=42)).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "514234e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Phage_ID</th>\n",
+       "      <th>Phage_source</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>Actinoplanes_phage_phiAsp2</td>\n",
+       "      <td>PhagesDB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>Arthrobacter_phage_Shoya</td>\n",
+       "      <td>PhagesDB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>Microbacterium_phage_LeeroyJenkins</td>\n",
+       "      <td>PhagesDB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>Mycobacterium_phage_Kboogie</td>\n",
+       "      <td>PhagesDB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>Microbacterium_phage_Haunter</td>\n",
+       "      <td>PhagesDB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105</th>\n",
+       "      <td>Mycobacterium_phage_JC27</td>\n",
+       "      <td>PhagesDB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>Mycobacterium_phage_Funston</td>\n",
+       "      <td>PhagesDB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107</th>\n",
+       "      <td>Arthrobacter_phage_King2</td>\n",
+       "      <td>PhagesDB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <td>Mycobacterium_phage_Pharsalus</td>\n",
+       "      <td>PhagesDB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>Mycobacterium_phage_Jobu08</td>\n",
+       "      <td>PhagesDB</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Phage_ID Phage_source\n",
+       "100          Actinoplanes_phage_phiAsp2     PhagesDB\n",
+       "101            Arthrobacter_phage_Shoya     PhagesDB\n",
+       "102  Microbacterium_phage_LeeroyJenkins     PhagesDB\n",
+       "103         Mycobacterium_phage_Kboogie     PhagesDB\n",
+       "104        Microbacterium_phage_Haunter     PhagesDB\n",
+       "105            Mycobacterium_phage_JC27     PhagesDB\n",
+       "106         Mycobacterium_phage_Funston     PhagesDB\n",
+       "107            Arthrobacter_phage_King2     PhagesDB\n",
+       "108       Mycobacterium_phage_Pharsalus     PhagesDB\n",
+       "109          Mycobacterium_phage_Jobu08     PhagesDB"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Filter to keep only phage id and phage source\n",
+    "tmp = sampled_phages[['Phage_ID', 'Phage_source']]\n",
+    "\n",
+    "# Get only rows with source PhagesDB\n",
+    "tmp[tmp['Phage_source'] == 'PhagesDB']"
    ]
   }
  ],
